# Multi-Agents-CrewAI

./: .env.example  .gitignore  Project_Planning.md  README.md  progrees.md  project_milestones.html  project_plan.json  project_tasks.html  pyproject.toml
src/multiagent/: app.py  project_planning.py
src/multiagent/config/: agents.yaml  tasks.yaml
